--- a/docroot/themes/iucn_who/less/theme/blocks.less
+++ b/docroot/themes/iucn_who/less/theme/blocks.less
@@ -7,9 +7,6 @@
 
 // Facets block
 @media @grid-mobile {
-  .facets-subtitle {
-    margin-left: .5 * @font-size-base--mobile;
-  }
   #facets-collapse {
     > .facets-content {
       padding-left: (.5 * @font-size-base--mobile +  20px);
